endpoint ban and unban warehouse
